browser/themes/shared/customizableui/panelUI.inc.css
/* ... */
/
*
Give
WebExtension
stand
-
alone
panels
extra
width
for
Chrome
compatibility
*
/
.
cui
-
widget
-
panel
[
viewId
^
=
PanelUI
-
webext
-
]
.
panel
-
mainview
{
max
-
width
:
800px
;
}
.
cui
-
widget
-
panel
[
viewId
^
=
PanelUI
-
webext
-
]
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
0
;
}
panelview
[
id
^
=
PanelUI
-
webext
-
]
{
overflow
:
hidden
;
}
panelview
:
not
(
[
mainview
]
)
.
toolbarbutton
-
text
.
cui
-
widget
-
panel
toolbarbutton
:
not
(
[
wrap
]
)
>
.
toolbarbutton
-
text
#
overflowMenu
-
customize
-
button
>
.
toolbarbutton
-
text
{
text
-
align
:
start
;
display
:
-
moz
-
box
;
}
.
cui
-
widget
-
panel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
4px
0
;
}
/
*
START
photonpanelview
adjustments
*
/
#
appMenu
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
panel
[
photon
]
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
0
;
}
photonpanelmultiview
panelview
{
background
:
var
(
-
-
arrowpanel
-
background
)
;
padding
:
0
;
}
#
appMenu
-
popup
panelview
#
customizationui
-
widget
-
multiview
panelview
:
not
(
[
extension
]
)
{
min
-
width
:
menuPanelWidth
;
max
-
width
:
30em
;
}
#
customizationui
-
widget
-
multiview
#
appMenu
-
libraryView
#
pageActionPanel
panelview
#
widget
-
overflow
panelview
{
min
-
width
:
wideMenuPanelWidth
;
max
-
width
:
wideMenuPanelWidth
;
}
/
*
Add
2
*
12px
extra
width
for
touch
mode
button
padding
.
*
/
#
appMenu
-
popup
[
touchmode
]
panelview
{
min
-
width
:
calc
(
menuPanelWidth
+
24px
)
;
}
photonpanelmultiview
.
panel
-
subview
-
body
{
padding
:
6px
0
;
}
/
*
END
photonpanelview
adjustments
*
/
.
cui
-
widget
-
panel
.
cui
-
widget
-
panelWithFooter
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
-
bottom
:
0
;
}
#
PanelUI
-
contents
{
display
:
block
;
flex
:
1
0
auto
;
margin
-
left
:
auto
;
margin
-
right
:
auto
;
padding
:
.
5em
0
;
max
-
width
:
menuPanelWidth
;
}
#
PanelUI
-
contents
-
scroller
{
-
moz
-
box
-
flex
:
1
;
overflow
-
y
:
auto
;
overflow
-
x
:
hidden
;
width
:
menuPanelWidth
;
padding
-
left
:
5px
;
padding
-
right
:
5px
;
-
moz
-
box
-
align
:
center
;
}
/
*
Allow
box
layout
to
take
over
when
the
view
exceeds
the
available
space
.
*
/
#
PanelUI
-
mainView
:
not
(
[
exceeding
]
)
>
#
PanelUI
-
contents
-
scroller
{
display
:
flex
;
}
.
toolbaritem
-
combined
-
buttons
inAnyPanel
>
toolbarbutton
>
.
toolbarbutton
-
icon
{
min
-
width
:
0
;
min
-
height
:
0
;
margin
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
.
panel
-
customization
-
placeholder
-
child
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
orient
:
vertical
;
width
:
calc
(
menuPanelButtonWidth
)
;
height
:
calc
(
51px
+
2
.
2em
)
;
}
/
*
Help
SDK
buttons
fit
in
.
*
/
toolbarpaletteitem
[
place
=
"
palette
"
]
>
toolbarbutton
[
constrain
-
size
=
"
true
"
]
>
.
toolbarbutton
-
icon
toolbarpaletteitem
[
place
=
"
palette
"
]
>
toolbarbutton
[
constrain
-
size
=
"
true
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
toolbarpaletteitem
[
place
=
"
palette
"
]
>
toolbaritem
[
sdkstylewidget
=
"
true
"
]
>
.
toolbarbutton
-
1
>
.
toolbarbutton
-
icon
toolbarpaletteitem
[
place
=
"
panel
"
]
>
toolbaritem
[
sdkstylewidget
=
"
true
"
]
>
.
toolbarbutton
-
1
>
.
toolbarbutton
-
icon
toolbarbutton
[
constrain
-
size
=
"
true
"
]
[
cui
-
areatype
=
"
menu
-
panel
"
]
>
.
toolbarbutton
-
icon
toolbarbutton
[
constrain
-
size
=
"
true
"
]
[
cui
-
areatype
=
"
menu
-
panel
"
]
>
.
toolbarbutton
-
badge
-
stack
>
.
toolbarbutton
-
icon
{
height
:
panelPaletteIconSize
;
width
:
panelPaletteIconSize
;
}
#
customization
-
palette
.
toolbarbutton
-
1
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
orient
:
vertical
;
padding
:
12px
0
9px
;
margin
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
orient
:
vertical
;
width
:
calc
(
menuPanelButtonWidth
-
2px
)
;
height
:
calc
(
49px
+
2
.
2em
)
;
border
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
{
margin
-
top
:
2px
;
/
*
Hack
needed
to
get
the
label
of
type
=
menu
-
button
aligned
with
other
buttons
*
/
}
.
panel
-
customization
-
placeholder
-
child
{
margin
:
6px
0
0
;
padding
:
2px
6px
;
border
:
1px
solid
transparent
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
[
type
=
"
menu
"
]
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
toolbarbutton
-
dropdown
-
arrow
.
png
"
)
;
background
-
position
:
right
3px
top
16px
;
background
-
repeat
:
no
-
repeat
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
[
type
=
"
menu
"
]
:
-
moz
-
locale
-
dir
(
rtl
)
{
background
-
position
:
left
3px
top
16px
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menu
-
dropmarker
{
display
:
none
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
dropmarker
{
-
moz
-
box
-
align
:
center
;
width
:
16px
;
margin
-
inline
-
start
:
-
16px
;
height
:
51px
;
margin
-
bottom
:
2
.
2em
;
padding
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
buttonover
]
)
buttonStateHover
>
.
toolbarbutton
-
menubutton
-
dropmarker
{
background
-
color
:
var
(
-
-
arrowpanel
-
dimmed
)
!
important
;
border
-
radius
:
0
0
0
2px
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
buttonover
]
)
buttonStateHover
>
.
toolbarbutton
-
menubutton
-
dropmarker
:
-
moz
-
locale
-
dir
(
rtl
)
{
border
-
radius
:
0
0
2px
0
;
}
#
main
-
window
:
not
(
[
customizing
]
)
.
panel
-
combined
-
button
[
disabled
]
>
.
toolbarbutton
-
icon
{
opacity
:
.
5
;
}
toolbaritem
[
cui
-
areatype
=
"
menu
-
panel
"
]
[
sdkstylewidget
=
"
true
"
]
:
not
(
.
panel
-
wide
-
item
)
{
width
:
calc
(
menuPanelButtonWidth
)
;
margin
:
0
!
important
;
}
/* ... */

