Bug 1395674 - Adding subviewbutton-nav class to menu-type toolbarbuttons and display the '>' in the overflow list. r=Gijs
MozReview-Commit-ID: I1pGXA3ecxT

UltraBlame original commit: 5193b9173c69a2976422bc6e4d161846e72fc714

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -3775,6 +3775,28 @@ calc
 )
 ;
 }
+toolbarpaletteitem
+[
+place
+=
+panel
+]
+>
+.
+toolbarbutton
+-
+1
+{
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+}
 /
 *
 Help
@@ -13879,6 +13901,120 @@ box
 orient
 :
 horizontal
+;
+}
+.
+widget
+-
+overflow
+-
+list
+.
+subviewbutton
+-
+nav
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+:
+:
+after
+{
+transform
+:
+scaleX
+(
+-
+1
+)
+;
+}
+.
+widget
+-
+overflow
+-
+list
+.
+subviewbutton
+-
+nav
+:
+:
+after
+{
+margin
+-
+inline
+-
+start
+:
+10px
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+content
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+back
+-
+12
+.
+svg
+)
+;
+fill
+:
+GrayText
+;
+float
+:
+right
+;
+}
+toolbarpaletteitem
+[
+place
+=
+panel
+]
+>
+.
+subviewbutton
+-
+nav
+:
+:
+after
+{
+opacity
+:
+0
+.
+5
 ;
 }
 .
